Minor tweaks to execution fig

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -244,15 +244,18 @@ For both problems, CORELS can learn short rule lists without sacrificing accurac
 % left lower right upper
 %\includegraphics[trim={13mm, 20mm, 0mm, 13mm},
 %width=0.495\textwidth]{figs/compas_execution_large-remaining-space.pdf}
-\includegraphics[trim={30mm, 20mm, 30mm, 10mm},
+\includegraphics[trim={34mm, 20mm, 34mm, 10mm},
 width=\textwidth]{figs/weapon_execution_large-remaining-space.pdf}
 \end{center}
-\caption{Left: CORELS with (lines) and without
+\caption{Execution progress of CORELS and selected variants.
+%
+Left: CORELS with (lines) and without
 (dashes) the equivalent points bound (Theorem~\ref{thm:identical}),
 for the ProPublica dataset (${\Reg = 0.005}$, ${M = 155}$).
 %
 Right: CORELS with (lines) and without (dashes)
-the symmetry-aware map %(\ie the permutation bound, Corollary~\ref{thm:permutation}),
+the permutation bound (Corollary~\ref{thm:permutation}),
+and thus the symmetry-aware map,
 for the NYCLU dataset (${\Reg = 0.01}$, ${M = 46}$).
 %
 Top: Objective value (thin line) and lower bound (thick line) for CORELS,
