--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -108,7 +108,7 @@ The work of Yang et al. provided the bit vector libraries and several ideas that
 and we used their code as a starting point.
 %
 Their scalable Bayesian rule lists (SBRL) method has uses beyond those of CORELS because SBRL models are probabilistic,
-producing an estimate of~${\P(Y=1 \given X)}$ for any~$X$, rather than a yes/no classification.
+producing an estimate of~${\P(Y=1 \given x)}$ for any~$x$, rather than a yes/no classification.
 %
 On the other hand, because the model is probabilistic, the bounds depend on approximations
 involving gamma functions.
